--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,8 @@
     "antd": "^5.20.6",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
