chore: ts config update

--- a/Frontend/.eslintrc
+++ b/Frontend/.eslintrc
@@ -6,7 +6,7 @@
     "plugin:react-hooks/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": { "project": ["./tsconfig.json"] },
+  "parserOptions": { "project": ["**/tsconfig.json"] },
   "plugins": ["@typescript-eslint"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
