--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "antd": "^5.20.6",
+    "decimal.js": "^10.4.3",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "html2canvas": "^1.4.1",
